// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Snapshots Button matches different sizes snapshot: large button 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#007AFF",
      },
      Object {
        "minHeight": 52,
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "600",
        },
        Object {
          "color": "#FFFFFF",
        },
        Object {
          "fontSize": 18,
        },
        false,
        undefined,
      ]
    }
  >
    Large
  </Text>
</View>
`;

exports[`Component Snapshots Button matches different sizes snapshot: medium button 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#007AFF",
      },
      Object {
        "minHeight": 44,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "600",
        },
        Object {
          "color": "#FFFFFF",
        },
        Object {
          "fontSize": 16,
        },
        false,
        undefined,
      ]
    }
  >
    Medium
  </Text>
</View>
`;

exports[`Component Snapshots Button matches different sizes snapshot: small button 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#007AFF",
      },
      Object {
        "minHeight": 32,
        "paddingHorizontal": 16,
        "paddingVertical": 4,
      },
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "600",
        },
        Object {
          "color": "#FFFFFF",
        },
        Object {
          "fontSize": 14,
        },
        false,
        undefined,
      ]
    }
  >
    Small
  </Text>
</View>
`;

exports[`Component Snapshots Button matches disabled state snapshot 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#007AFF",
      },
      Object {
        "minHeight": 44,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      Object {
        "opacity": 0.5,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "600",
        },
        Object {
          "color": "#FFFFFF",
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "opacity": 0.5,
        },
        undefined,
      ]
    }
  >
    Disabled Button
  </Text>
</View>
`;

exports[`Component Snapshots Button matches ghost variant snapshot 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "transparent",
      },
      Object {
        "minHeight": 44,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "600",
        },
        Object {
          "color": "#007AFF",
        },
        Object {
          "fontSize": 16,
        },
        false,
        undefined,
      ]
    }
  >
    Ghost Button
  </Text>
</View>
`;

exports[`Component Snapshots Button matches loading state snapshot 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#007AFF",
      },
      Object {
        "minHeight": 44,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      Object {
        "opacity": 0.5,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#FFFFFF"
    size="small"
  />
</View>
`;

exports[`Component Snapshots Button matches outline variant snapshot 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "transparent",
        "borderColor": "#007AFF",
        "borderWidth": 1,
      },
      Object {
        "minHeight": 44,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "600",
        },
        Object {
          "color": "#007AFF",
        },
        Object {
          "fontSize": 16,
        },
        false,
        undefined,
      ]
    }
  >
    Outline Button
  </Text>
</View>
`;

exports[`Component Snapshots Button matches primary variant snapshot 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#007AFF",
      },
      Object {
        "minHeight": 44,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "600",
        },
        Object {
          "color": "#FFFFFF",
        },
        Object {
          "fontSize": 16,
        },
        false,
        undefined,
      ]
    }
  >
    Primary Button
  </Text>
</View>
`;

exports[`Component Snapshots Button matches secondary variant snapshot 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#F2F2F7",
      },
      Object {
        "minHeight": 44,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "600",
        },
        Object {
          "color": "#000000",
        },
        Object {
          "fontSize": 16,
        },
        false,
        undefined,
      ]
    }
  >
    Secondary Button
  </Text>
</View>
`;

exports[`Component Snapshots ItemList matches custom empty message snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 32,
    }
  }
  testID="empty-state"
>
  <Text
    style={
      Object {
        "color": "#999",
        "fontSize": 16,
      }
    }
    testID="empty-message"
  >
    Custom empty message
  </Text>
</View>
`;

exports[`Component Snapshots ItemList matches empty list snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 32,
    }
  }
  testID="empty-state"
>
  <Text
    style={
      Object {
        "color": "#999",
        "fontSize": 16,
      }
    }
    testID="empty-message"
  >
    No items found
  </Text>
</View>
`;

exports[`Component Snapshots ItemList matches list with items snapshot 1`] = `
<View
  testID="item-list"
>
  <View
    testID="flat-list-item-1"
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      onPress={[Function]}
      style={
        Object {
          "borderBottomColor": "#eee",
          "borderBottomWidth": 1,
          "padding": 16,
        }
      }
      testID="item-1"
    >
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
        testID="item-title-1"
      >
        Item 1
      </Text>
      <Text
        style={
          Object {
            "color": "#666",
            "fontSize": 14,
            "marginTop": 4,
          }
        }
        testID="item-description-1"
      >
        Description 1
      </Text>
    </View>
  </View>
  <View
    testID="flat-list-item-2"
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      onPress={[Function]}
      style={
        Object {
          "borderBottomColor": "#eee",
          "borderBottomWidth": 1,
          "padding": 16,
        }
      }
      testID="item-2"
    >
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
        testID="item-title-2"
      >
        Item 2
      </Text>
      <Text
        style={
          Object {
            "color": "#666",
            "fontSize": 14,
            "marginTop": 4,
          }
        }
        testID="item-description-2"
      >
        Description 2
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Snapshots LoginForm matches initial state snapshot 1`] = `
<View
  style={
    Object {
      "padding": 16,
    }
  }
  testID="login-form"
>
  <View
    style={
      Object {
        "marginBottom": 16,
      }
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      style={
        Object {
          "borderColor": "#ccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "fontSize": 16,
          "padding": 12,
        }
      }
      testID="email-input"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 16,
      }
    }
  >
    <TextInput
      editable={true}
      onChangeText={[Function]}
      placeholder="Password"
      secureTextEntry={true}
      style={
        Object {
          "borderColor": "#ccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "fontSize": 16,
          "padding": 12,
        }
      }
      testID="password-input"
      value=""
    />
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#007AFF",
        "borderRadius": 4,
        "padding": 16,
      }
    }
    testID="submit-button"
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Login
    </Text>
  </View>
</View>
`;

exports[`Component Snapshots LoginForm matches loading state snapshot 1`] = `
<View
  style={
    Object {
      "padding": 16,
    }
  }
  testID="login-form"
>
  <View
    style={
      Object {
        "marginBottom": 16,
      }
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={false}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      style={
        Object {
          "borderColor": "#ccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "fontSize": 16,
          "padding": 12,
        }
      }
      testID="email-input"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 16,
      }
    }
  >
    <TextInput
      editable={false}
      onChangeText={[Function]}
      placeholder="Password"
      secureTextEntry={true}
      style={
        Object {
          "borderColor": "#ccc",
          "borderRadius": 4,
          "borderWidth": 1,
          "fontSize": 16,
          "padding": 12,
        }
      }
      testID="password-input"
      value=""
    />
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#007AFF",
        "borderRadius": 4,
        "padding": 16,
      }
    }
    testID="submit-button"
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Loading...
    </Text>
  </View>
</View>
`;
